// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CommandPalette > RTL rendering > renders correctly in LTR direction 1`] = `
<div
  aria-label="Command Palette"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-start justify-center pt-[20vh]"
  role="dialog"
>
  <style>
    
        @keyframes backdropIn {
          from { opacity: 0; }
          to { opacity: 1; }
        }
      
  </style>
  <div
    aria-hidden="true"
    class="absolute inset-0 bg-background/40 backdrop-blur-sm animate-[backdropIn_100ms_ease-out_forwards]"
  />
  <div
    class="relative w-full max-w-lg overflow-hidden rounded-xl bg-background/95 ring-[0.65px] ring-border/50 shadow-lg backdrop-blur-md"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r3e»"
      id="radix-«r3d»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Clinical Command Palette
    </label>
    <input
      aria-autocomplete="list"
      aria-controls="radix-«r3c»"
      aria-expanded="true"
      aria-labelledby="radix-«r3d»"
      autocomplete="off"
      autocorrect="off"
      class="w-full border-b border-border bg-transparent px-4 py-3 text-base font-medium text-foreground outline-none placeholder:text-muted-foreground"
      cmdk-input=""
      id="radix-«r3e»"
      placeholder="Search clinical actions..."
      role="combobox"
      spellcheck="false"
      type="text"
      value=""
    />
    <div
      aria-label="Suggestions"
      class="max-h-72 overflow-y-auto p-2"
      cmdk-list=""
      id="radix-«r3c»"
      role="listbox"
      tabindex="-1"
    >
      <div
        cmdk-list-sizer=""
      >
        <div
          class="px-2 py-1 text-xs font-semibold uppercase tracking-wide text-muted-foreground"
          cmdk-group=""
          data-value="Clinical Sections"
          role="presentation"
        >
          <div
            aria-hidden="true"
            cmdk-group-heading=""
            id="radix-«r3g»"
          >
            Clinical Sections
          </div>
          <div
            aria-labelledby="radix-«r3g»"
            cmdk-group-items=""
            role="group"
          >
            <div
              aria-disabled="false"
              aria-selected="true"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="true"
              data-value="vitals"
              id="radix-«r3h»"
              role="option"
            >
              <span>
                Vitals
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                V
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="subjective"
              id="radix-«r3i»"
              role="option"
            >
              <span>
                Subjective
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                S
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="objective"
              id="radix-«r3j»"
              role="option"
            >
              <span>
                Objective
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                O
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="assessment"
              id="radix-«r3k»"
              role="option"
            >
              <span>
                Assessment
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                A
              </kbd>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-3 border-t border-border px-4 py-2 text-xs text-muted-foreground"
    >
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          ↑↓
        </kbd>
         Navigate
      </span>
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          ↵
        </kbd>
         Select
      </span>
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          Esc
        </kbd>
         Close
      </span>
    </div>
  </div>
</div>
`;

exports[`CommandPalette > RTL rendering > renders correctly in RTL direction 1`] = `
<div
  aria-label="Command Palette"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-start justify-center pt-[20vh]"
  role="dialog"
>
  <style>
    
        @keyframes backdropIn {
          from { opacity: 0; }
          to { opacity: 1; }
        }
      
  </style>
  <div
    aria-hidden="true"
    class="absolute inset-0 bg-background/40 backdrop-blur-sm animate-[backdropIn_100ms_ease-out_forwards]"
  />
  <div
    class="relative w-full max-w-lg overflow-hidden rounded-xl bg-background/95 ring-[0.65px] ring-border/50 shadow-lg backdrop-blur-md"
    cmdk-root=""
    tabindex="-1"
  >
    <label
      cmdk-label=""
      for="radix-«r35»"
      id="radix-«r34»"
      style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    >
      Clinical Command Palette
    </label>
    <input
      aria-autocomplete="list"
      aria-controls="radix-«r33»"
      aria-expanded="true"
      aria-labelledby="radix-«r34»"
      autocomplete="off"
      autocorrect="off"
      class="w-full border-b border-border bg-transparent px-4 py-3 text-base font-medium text-foreground outline-none placeholder:text-muted-foreground"
      cmdk-input=""
      id="radix-«r35»"
      placeholder="Search clinical actions..."
      role="combobox"
      spellcheck="false"
      type="text"
      value=""
    />
    <div
      aria-label="Suggestions"
      class="max-h-72 overflow-y-auto p-2"
      cmdk-list=""
      id="radix-«r33»"
      role="listbox"
      tabindex="-1"
    >
      <div
        cmdk-list-sizer=""
      >
        <div
          class="px-2 py-1 text-xs font-semibold uppercase tracking-wide text-muted-foreground"
          cmdk-group=""
          data-value="Clinical Sections"
          role="presentation"
        >
          <div
            aria-hidden="true"
            cmdk-group-heading=""
            id="radix-«r37»"
          >
            Clinical Sections
          </div>
          <div
            aria-labelledby="radix-«r37»"
            cmdk-group-items=""
            role="group"
          >
            <div
              aria-disabled="false"
              aria-selected="true"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="true"
              data-value="vitals"
              id="radix-«r38»"
              role="option"
            >
              <span>
                Vitals
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                V
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="subjective"
              id="radix-«r39»"
              role="option"
            >
              <span>
                Subjective
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                S
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="objective"
              id="radix-«r3a»"
              role="option"
            >
              <span>
                Objective
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                O
              </kbd>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="flex cursor-pointer items-center justify-between rounded-xl px-3 py-2.5 text-sm font-medium text-foreground transition-colors duration-100 data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground"
              cmdk-item=""
              data-disabled="false"
              data-selected="false"
              data-value="assessment"
              id="radix-«r3b»"
              role="option"
            >
              <span>
                Assessment
              </span>
              <kbd
                class="rounded border border-border bg-muted px-1.5 py-0.5 text-xs font-semibold text-muted-foreground"
              >
                A
              </kbd>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center gap-3 border-t border-border px-4 py-2 text-xs text-muted-foreground"
    >
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          ↑↓
        </kbd>
         Navigate
      </span>
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          ↵
        </kbd>
         Select
      </span>
      <span>
        <kbd
          class="rounded border border-border bg-muted px-1 py-0.5 font-semibold"
        >
          Esc
        </kbd>
         Close
      </span>
    </div>
  </div>
</div>
`;
